[package]
name = "adaptive-thresholding"
version = "0.1.0"
authors = ["OkamotoRiku"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.70"
image = {version = "0.23.12", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "hdr", "dxt", "dds", "farbfeld"] }
imageproc = "0.22"
console_error_panic_hook = "0.1.6"